--- a/profile-service/src/main/resources/application.properties
+++ b/profile-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Service Info
 spring.application.name=profile-service
+server.port=8083
+
+# Eureka Client Config
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
